# buster-claw

./: .credo.exs  .gitignore  .rgignore  .sobelow-conf  .tool-versions  ANALYSIS.md  BUILD.md  CODE_QUALITY_ROADMAP.md  Intentions.md  LICENSE  README.md  TRADEMARK.md  app.go  go.mod  go.sum  helpers.go  main.go  mix.exs  sources.json  wails.json
.github/workflows/: ci.yml  release-desktop.yml
assets/: package-lock.json  package.json
assets/css/: app.css
assets/js/: app.js  chrome.js
cmd/mcp-server/: main.go
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
daily-growth/: 05-07-26-elixir-rewrite-review.md  05-07-26-elixir-rewrite-roadmap.md  07-02-26-veteran-review.md  cto-roast-2026-04-21.md
daily-growth/MM-DD-YY-Summary/: 04-18-26-summary.md  04-19-26-summary.md  04-20-26-summary.md  04-21-26-summary.md  04-26-26-summary.md  04-28-26-summary.md  04-30-26-summary.md  05-01-26-summary.md  05-07-26-summary.md  05-17-26-summary.md  05-25-26-summary.md  05-26-26-summary.md  05-30-26-summary.md  05-31-26-summary.md  06-07-26-summary.md  06-08-26-summary.md  06-09-26-summary.md  06-10-26-summary.md  06-13-26-summary.md  06-14-26-summary.md  06-16-26-summary.md  06-18-26-summary.md  06-20-26-summary.md  06-21-26-summary.md  06-22-26-summary.md  06-23-26-summary.md  06-27-26-summary.md  06-28-26-summary.md  07-02-26-summary.md  07-03-26-summary.md  07-04-26-summary.md  07-05-26-summary.md  07-11-26-summary.md  07-12-26-summary.md  07-13-26-summary.md  07-14-26-summary.md  07-15-26-summary.md  07-17-26-summary.md  07-18-26-summary.md  07-20-26-summary.md  (+1 more)
daily-growth/archive/: 05-07-26-elixir-rewrite-roadmap.md  05-17-26-quality-refactor-roadmap.md  05-26-26-scheduler-research-quantum-vs-oban.md  05-30-26-desktop-shell-terminal-hardening-plan.md  README.md  (+30 more)
desktop/tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  build.rs  rust-toolchain.toml  tauri.conf.json
desktop/tauri/capabilities/: browser-chrome.json  default.json
desktop/tauri/icons/: icon.icns
desktop/tauri/launchd/: com.hightowerbuilds.busterclaw.plist  lol.busterclaw.desktop.plist
desktop/tauri/permissions/autogenerated/: browser_app_navigate.toml  browser_click_active.toml  browser_close_tab.toml  browser_current.toml  browser_extract_active.toml  browser_fill_active.toml  browser_find.toml  browser_find_count.toml  browser_find_elements_active.toml  browser_navigate_active.toml  browser_new_tab.toml  browser_open.toml  browser_open_tab_active.toml  browser_read_active.toml  browser_render_page.toml  browser_reveal_download.toml  browser_set_content_blocking.toml  browser_set_sidebar.toml  browser_set_zoom.toml  browser_switch_tab.toml  browser_wait_active.toml  speak.toml  stop_speaking.toml  terminal_attach.toml  terminal_busy.toml  terminal_close.toml  terminal_input.toml  terminal_open.toml  terminal_resize.toml  workspace_relaunch.toml
desktop/tauri/src/: blocklist.json  browser.rs  main.rs  terminal.rs  voice.rs  workspace.rs
desktop/tauri/src/browser/: ffi.rs  geometry.rs  js.rs  labels.rs  mod.rs  notify.rs  state.rs  webviews.rs
desktop/tauri/tests/: acl_lockstep.rs
docs/: ARCHITECTURE.md  COMMAND_SURFACE.md  DESKTOP_PACKAGING.md  LOCAL_TRUST.md  NOTES_THAT_FLOAT_UI_ADOPTION.md  QUALITY.md  UML.md  chat-roadmap.md
frontend/: index.html  package-lock.json  package.json  package.json.md5  vite.config.ts
lib/: buster_claw.ex  buster_claw_web.ex
scripts/: build_desktop.sh  check_docs_drift.sh  check_rust.sh  dev.sh  fetch_whisper_model.sh  install_launchd.sh  smoke_command_surface.sh  smoke_desktop.sh  sync_version.sh
supabase/: SETUP.md
test/: test_helper.exs
user-guide/: setup.md
(+834 files in other folders)
