[package]
name = "buster-claw-desktop"
version = "0.1.0"
description = "Tauri desktop shell for the Buster Claw Phoenix rewrite"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
portpicker = "0.1"
dirs = "5"
rand = "0.8"
portable-pty = "0.8"
keyring = "2"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"

# macOS-only: reach the underlying WKWebView (via tauri's PlatformWebview::inner())
# to call -takeSnapshotWithConfiguration:completionHandler: for browser_screenshot.
#
# Voice input (STT, voice roadmap Phase 2): `cpal` captures microphone audio via
# CoreAudio; `whisper-rs` statically compiles whisper.cpp (Metal backend) for
# on-device transcription — nothing extra to ship or sign. Both are macOS-only
# because the shell is macOS-only today.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"
cpal = "0.18"
whisper-rs = { version = "0.16", features = ["metal"] }
