[package]
name = "buster-claw-desktop"
version = "0.1.0"
description = "Tauri desktop shell for the Buster Claw Phoenix rewrite"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
portpicker = "0.1"
dirs = "5"
rand = "0.8"
portable-pty = "0.8"
keyring = "2"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
tauri-plugin-single-instance = "2"

# macOS-only: reach the underlying WKWebView (via tauri's PlatformWebview::inner())
# to call -takeSnapshotWithConfiguration:completionHandler: for browser_screenshot.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[dev-dependencies]
serde_json = "1"
