[package]
name = "buster-claw-desktop"
version = "0.1.0"
description = "Tauri desktop shell for the Buster Claw Phoenix rewrite"
edition = "2021"

[lints.rust]
# The pre-2018 `objc` crate's macros expand `#[cfg(feature = "cargo-clippy")]`
# (the old clippy-detection idiom); register the value so check-cfg doesn't flag
# every msg_send!/class! site as an unexpected cfg. Drop when objc is replaced.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
portpicker = "0.1"
dirs = "5"
rand = "0.8"
portable-pty = "0.8"
keyring = "2"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
# Already in the tree via tauri (tauri::Url IS url::Url); a direct dep so the
# pure labels module can name the type without importing tauri.
url = "2"
tauri-plugin-single-instance = "2"

# macOS-only: reach the underlying WKWebView (via tauri's PlatformWebview::inner())
# to call -takeSnapshotWithConfiguration:completionHandler: for browser_screenshot.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
block = "0.1"

[dev-dependencies]
serde_json = "1"
